<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backdrop">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/companyTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/followingTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/followersTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/createdAtTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateat"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>